chore: update Brewfile

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,8 +1,52 @@
+# Until https://github.com/kcrawford/dockutil/pull/131
+tap "branchvincent/tap"
+brew "branchvincent/tap/dockutil"
+
+tap "beeftornado/rmtree"
+
+brew "argocd"
+# brew "bash"
 brew "bat"
+brew "curl"
+# brew "deno"
+# brew "direnv"
+brew "dlv"
+# brew "duti"
 brew "exa"
 brew "fd"
 brew "fish", args: ["HEAD"]
 brew "fzf"
 brew "gh"
 brew "git"
+brew "git-delta"
+# brew "git-fresh"
+# brew "glances"
+brew "gnu-sed"
+brew "gnu-tar"
+brew "go"
+brew "gopls"
+brew "grep"
+# brew "hadolint"
 brew "helix", args: ["HEAD"]
+brew "helm"
+brew "httpie"
+# brew "hugo"
+# brew "hyperfine"
+# brew "hyperkit"
+brew "jq"
+# brew "kind"
+# brew "ko"
+brew "kubernetes-cli"
+brew "krew"
+brew "kustomize"
+brew "less"
+# brew "lua-language-server"
+brew "mas"
+brew "ripgrep"
+brew "sd"
+brew "skaffold"
+brew "sops"
+brew "yaml-language-server"
+brew "yq"
+brew "zoxide"
+# brew "zsh"
