fix(homebrew): change dockutil to cask

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,6 +1,5 @@
 # Until https://github.com/kcrawford/dockutil/pull/131
-tap "branchvincent/tap"
-brew "branchvincent/tap/dockutil"
+cask "hpedrorodrigues/tools/dockutil"
 
 tap "beeftornado/rmtree"
 
