--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,4 +1,6 @@
 tap "beeftornado/rmtree"
+# tap "homebrew/cask-drivers"
+# tap "homebrew/cask-fonts"
 tap "homebrew/command-not-found"
 
 brew "argocd"
