--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -8,7 +8,7 @@ brew "argocd"
 brew "bat"
 brew "curl"
 # brew "deno"
-# brew "direnv"
+brew "direnv"
 brew "dlv"
 # brew "duti"
 brew "exa"
@@ -19,7 +19,7 @@ brew "gh"
 brew "git"
 brew "git-delta"
 # brew "git-fresh"
-# brew "glances"
+brew "glances"
 brew "gnu-sed"
 brew "gnu-tar"
 brew "go"
