feat: install fonts

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,6 +1,6 @@
 tap "beeftornado/rmtree"
 # tap "homebrew/cask-drivers"
-# tap "homebrew/cask-fonts"
+tap "homebrew/cask-fonts"
 tap "homebrew/command-not-found"
 
 brew "argocd"
@@ -71,9 +71,9 @@ brew "zoxide"
 
 cask "1password-cli"
 cask "caffeine"
-# cask "font-jetbrains-mono"
-# cask "font-jetbrains-mono-nerd-font"
-# cask "font-symbols-only-nerd-font"
+cask "font-jetbrains-mono"
+cask "font-jetbrains-mono-nerd-font"
+cask "font-symbols-only-nerd-font"
 cask "google-cloud-sdk"
 # cask "google-drive"
 cask "kitty"
