feat: use Colima

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -7,10 +7,12 @@ brew "argocd"
 # brew "bash"
 brew "bat"
 brew "chezmoi"
+brew "colima"
 brew "curl"
 # brew "deno"
 brew "direnv"
 brew "dlv"
+brew "docker"
 # brew "duti"
 brew "eza"
 brew "fd"
