chore: add NVM Fish plugin

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -1,18 +1,18 @@
 tap "beeftornado/rmtree"
-# tap "homebrew/cask-drivers"
-tap "homebrew/cask-fonts"
 tap "homebrew/command-not-found"
 
 brew "argocd"
-# brew "bash"
+brew "bash"
 brew "bat"
 brew "chezmoi"
 brew "colima"
 brew "curl"
+brew "delve"
 # brew "deno"
 brew "direnv"
-brew "dlv"
 brew "docker"
+# brew "docker-buildx"
+brew "dockutil"
 # brew "duti"
 brew "eza"
 brew "fd"
@@ -21,79 +21,66 @@ brew "fzf"
 brew "gh"
 brew "git"
 brew "git-delta"
-# brew "git-fresh"
 brew "glances"
 brew "gnu-sed"
 brew "gnu-tar"
 brew "go"
-brew "gopls"
+# brew "gopls"
+brew "goreleaser"
 brew "grep"
 # brew "hadolint"
-brew "helix", args: ["HEAD"]
+# brew "helix", args: ["HEAD"]
 brew "helm"
 brew "httpie"
-# brew "hugo"
-# brew "hyperfine"
-# brew "hyperkit"
 brew "jq"
-# brew "kind"
-# brew "ko"
+brew "krew"
 brew "ksops"
 brew "kubernetes-cli"
-brew "krew"
 brew "kustomize"
 brew "less"
-# brew "lua-language-server"
 brew "mas"
-# brew "minikube"
 brew "moreutils"
-# brew "node"
 brew "pdm"
-# brew "pipgrip"
 brew "pipx"
-# brew "podman"
 brew "poetry"
 brew "pre-commit"
-# brew "ptpython"
-# brew "pyenv"
 brew "python"
-brew "python-lsp-server"
+# brew "python-lsp-server"
 brew "ripgrep"
 brew "sd"
 brew "skaffold"
+# brew "solargraph"
 brew "sops"
-# brew "stern"
-brew "tfenv"
+# brew "terraform-ls"
+brew "tfenv", args: ["HEAD"]
 brew "trash"
 brew "vault"
 brew "viddy"
+brew "virtualenv"
 brew "wget"
-brew "yaml-language-server"
+# brew "yaml-language-server"
+# brew "yarn"
 brew "yq"
 brew "zoxide"
-# brew "zsh"
 
 cask "1password"
 cask "1password-cli"
 cask "akuity"
 cask "caffeine"
-cask "font-jetbrains-mono"
-cask "font-jetbrains-mono-nerd-font"
+cask "discord"
+cask "font-iosevka"
+cask "font-iosevka-term-nerd-font"
 cask "font-symbols-only-nerd-font"
 cask "google-cloud-sdk"
-# cask "google-drive"
 cask "kitty"
 # cask "omnidisksweeper"
 # cask "qlmarkdown", args: { no_quarantine: true }
 cask "rectangle"
+cask "slack"
+cask "zed"
 # cask "syntax-highlight", args: { no_quarantine: true }
-# cask "visual-studio-code"
-
-# Until https://github.com/kcrawford/dockutil/pull/131
-cask "hpedrorodrigues/tools/dockutil"
 
 mas "1Password for Safari", id: 1569813296
-mas "FoodNoms", id: 1479461686
 mas "Keynote", id: 409183694
 mas "Magnet", id: 441258766
 mas "Numbers", id: 409203825
