feat: use Colima

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -11,7 +11,7 @@ brew "delve"
 # brew "deno"
 brew "direnv"
 brew "docker"
-# brew "docker-buildx"
+brew "docker-buildx"
 brew "dockutil"
 # brew "duti"
 brew "eza"
@@ -54,6 +54,7 @@ brew "sops"
 # brew "terraform-ls"
 brew "tfenv", args: ["HEAD"]
 brew "trash"
+brew "uv"
 brew "vault"
 brew "viddy"
 brew "virtualenv"
