--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -24,7 +24,7 @@
 	autocrlf = input							# normalize line endings on commit (but not checkout)
 	editor = zed --wait
 	excludesFile = ~/.config/git/ignore
-	pager = delta --dark --diff-so-fancy --navigate    # use dark theme explicitly until https://github.com/dandavison/delta/issues/1707 is resolved
+	pager = delta --diff-so-fancy --navigate
 	trustctime = false
 [credential]
 	helper = osxkeychain
@@ -47,7 +47,7 @@
 [init]
 	defaultBranch = main
 [interactive]
-	diffFilter = delta --color-only --dark     # use dark theme explicitly until https://github.com/dandavison/delta/issues/1707 is resolved
+	diffFilter = delta --color-only
 [log]
 	date = relative
 	follow = true
