--- a/dot_config/gh/config.yml
+++ b/dot_config/gh/config.yml
@@ -8,7 +8,8 @@ prompt: enabled
 pager:
 # Aliases allow you to create nicknames for gh commands
 aliases:
-    co: pr checkout
+  co: pr checkout
+  member: api -f role=member --hostname github.mlbam.net --method PUT /orgs/Infrastructure/teams/$1/memberships/$2
 # The path to a unix socket through which send HTTP connections. If blank, HTTP traffic will be handled by net/http.DefaultTransport.
 http_unix_socket:
 # What web browser gh should use when opening URLs. If blank, will refer to environment.
