chore(homebrew): install qemu as dependency for colima

--- a/dot_config/homebrew/Brewfile
+++ b/dot_config/homebrew/Brewfile
@@ -46,6 +46,7 @@ brew "poetry"
 brew "pre-commit"
 brew "python"
 # brew "python-lsp-server"
+brew "qemu"
 brew "ripgrep"
 brew "sd"
 brew "skaffold"
